--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -6,7 +6,6 @@ About.title=About
 Browser.add.bookmark=Add Bookmark
 Browser.bookmark.name=bookmark name: 
 Browser.computer=Computer
-Browser.dry.run=\ (dry-run)
 Browser.error.launching.item=Error launching item
 Browser.error.saving.bookmarks=Error saving Bookmarks: 
 Browser.error=Error: 
@@ -23,6 +22,7 @@ BrowserTable.column.modified=Modified
 BrowserTable.column.name=Name
 BrowserTable.column.size=Size
 Job.config.cancelled=Job {0} cancelled
+Job.this.job.contains.remote.subscriber=This job contains remote subscriber(s). The existing remote subscriber connection will be unavailable while the job is running. Continue?
 Jobs.executing.job=Executing job\: 
 JobsUI.add.N.origins=Add {0} {1} origins?
 JobsUI.any.publisher=Any publisher
@@ -66,6 +66,7 @@ JobsUI.labelHelp.toolTipText=Jobs help
 JobsUI.labelOrigins.text=Task Origins\:
 JobsUI.labelTasks.text=Tasks\:
 JobsUI.okButton.text=OK
+JobsUI.publisher.specific=Specific publisher
 JobsUI.pubsub.select.publisher.or.subscriber=Select Publisher or Subscriber
 JobsUI.pubsub.select.publisher=Select Publisher
 JobsUI.pubsub.select.subscriber=Select Subscriber
@@ -79,10 +80,9 @@ JobsUI.select.publisher=-select publisher-
 JobsUI.select.subscriber.tooltip=Select subscriber
 JobsUI.select.subscriber=-select subscriber-
 JobsUI.select.tool=Select tool\:
-JobsUI.publisher.specific=Specific publisher
+JobsUI.stop.currently.running.job=Stop currently running Job?
 JobsUI.subscriber.local=Local Subscriber
 JobsUI.subscriber.remote=Remote Subscriber
-JobsUI.stop.currently.running.job=Stop currently running Job?
 JobsUI.task.has.no.origins=Task has no origins: 
 JobsUI.task.has.no.publisher.and.or.subscriber=Task has no publisher and/or subscriber\: 
 JobsUI.title=Jobs
@@ -128,7 +128,7 @@ NavHelp.error.opening.help.file=Error opening help file:
 NavHelp.name=NavHelp
 NavHelp.title=NavHelp
 NavTransferHandler.action.cancelled=Action cancelled
-NavTransferHandler.are.you.sure.you.want.to=Are you sure you want to {0} {1} in {2}{3, choice, 0# files|1# file} to {4}?
+NavTransferHandler.are.you.sure.you.want.to={0} {1} in {2}{3, choice, 0# files|1# file} to {4}?
 NavTransferHandler.cannot.transfer.to.currently.selected.location=Cannot transfer to currently selected location
 NavTransferHandler.cannot.transfer=Cannot transfer 
 NavTransferHandler.continue=Continue?
@@ -188,8 +188,8 @@ Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
 Navigator.displaying=Displaying Navigator
-Navigator.dryrun=Dry-run
 Navigator.dryrun.tooltip=Run but do not perform any actions
+Navigator.dryrun=Dry-run
 Navigator.error.launching.browser=Error launching browser
 Navigator.error.writing.hint=Error writing Hint: 
 Navigator.initialized=Initialized Navigator
@@ -324,6 +324,8 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
+Navigator.menuItemAutoRefresh.mnemonic=A
+Navigator.menuItemAutoRefresh.text=Auto-Refresh
 Navigator.menuItemDocumentation.toolTipText=External link
 Navigator.menuItemEmptyFinder.mnemonic=E
 Navigator.menuItemEmptyFinder.text=Empty Directory Finder ...
@@ -399,20 +401,24 @@ Settings.generalPanel.tab.title=General
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
 Settings.hideHiddenFilesLabel.text=Hide hidden files\:
 Settings.hintButton.ColorLabel.text=Hint Tracking button color\:
-Settings.tabPlacementlabel.text=Tab placement\:
 Settings.librariesPanel.tab.title=Libraries
 Settings.localeLabel.text=Locale\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
 Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
 Settings.scaleCheckBox.text=uncheck for decimal (1000) K
 Settings.scaleLabel.text=Binary (1024) K scale\:
-Settings.showCcpConfirmationLabel.text=Copy/Cut/Paste confirmation\:
-Settings.showDeleteConfirmationLabel.text=Delete confirmation\:
-Settings.showDndConfirmationLabel.text=Drag 'n Drop confirmation\:
-Settings.showTouchConfirmationLabel.text=Touch confirmation\:
+Settings.showCcpConfirmationLabel.text=Confirm copy/cut/paste\:
+Settings.showDeleteConfirmationLabel.text=Confirm delete\:
+Settings.showDndConfirmationLabel.text=Confirm drag 'n drop\:
+Settings.showTouchConfirmationLabel.text=Confirm touch\:
 Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
 Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
 Settings.sortReverseLabel.text=Sort reverse\:
+Settings.tabPlacementlabel.text=Tab placement\:
+Settings.tabplacement.bottom=Bottom
+Settings.tabplacement.left=Left
+Settings.tabplacement.right=Right
+Settings.tabplacement.top=Top
 Settings.textField.HintButtonColor.toolTipText=RGB color in hexadecimal
 Settings.this.title=Navigator Settings
 Task.no.repository.is.loaded=No repository is loaded
@@ -456,11 +462,12 @@ Transfer.would.rm.file=\  > Would rm file:
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 Z.cancel.all.changes=Cancel all changes?
 Z.cancel.changes=Cancel Changes
-Z.cannot.find=Cannot find\: 
 Z.cancel.run=Cancel Run
+Z.cannot.find=Cannot find\: 
 Z.completed=\ completed
 Z.copy=\ (copy)
 Z.delete.configuration=Delete Configuration
+Z.dry.run=\ (dry-run)
 Z.error.parsing=Error parsing\: 
 Z.error.reading=Error reading\: 
 Z.error.writing=Error writing\: 
@@ -477,7 +484,4 @@ Z.remote.uppercase=Remote
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.untitled=Untitled
-Settings.tabplacement.top=Top
-Settings.tabplacement.bottom=Bottom
-Settings.tabplacement.left=Left
-Settings.tabplacement.right=Right
+Z.please.wait.for.the.current.operation.to.finish=Please wait for the current operation to finish
