--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -58,14 +58,12 @@ JobsUI.buttonRun.text=Run
 JobsUI.buttonRun.toolTipText=Execute the selected configuration
 JobsUI.buttonTaskDown.toolTipText=Move task down
 JobsUI.buttonTaskUp.toolTipText=Move task Up
-JobsUI.cancelButton.text=Cancel
 JobsUI.generated=Copy job command line (Ctrl-C)\: 
 JobsUI.help=Jobs Help
 JobsUI.job.has.no.tasks=Job has no tasks
 JobsUI.labelHelp.toolTipText=Jobs help
 JobsUI.labelOrigins.text=Task Origins\:
 JobsUI.labelTasks.text=Tasks\:
-JobsUI.okButton.text=OK
 JobsUI.publisher.specific=Specific publisher
 JobsUI.pubsub.select.publisher.or.subscriber=Select Publisher or Subscriber
 JobsUI.pubsub.select.publisher=Select Publisher
@@ -89,7 +87,6 @@ JobsUI.title=Jobs
 JunkRemover.button.AddRow.mnemonic=A
 JunkRemover.button.AddRow.text=Add
 JunkRemover.button.AddRow.toolTipText=Add an empty pattern
-JunkRemover.button.Cancel.text=Cancel
 JunkRemover.button.Copy.mnemonic=C
 JunkRemover.button.Copy.text=Copy
 JunkRemover.button.Copy.toolTipText=Copy an existing tool configuration
@@ -99,8 +96,6 @@ JunkRemover.button.Delete.toolTipText=Delete a tool configuration
 JunkRemover.button.New.mnemonic=N
 JunkRemover.button.New.text=New
 JunkRemover.button.New.toolTipText=Add new tool configuration
-JunkRemover.button.Ok.mnemonic=O
-JunkRemover.button.Ok.text=OK
 JunkRemover.button.RemoveRow.mnemonic=E
 JunkRemover.button.RemoveRow.text=Remove
 JunkRemover.button.RemoveRow.toolTipText=Delete one or more patterns
@@ -122,8 +117,6 @@ JunkRemover.title=Junk Remover
 JunkRemover.uses.only.one.repository={0} uses only one repository
 MainFrame.cancelling.transfers.at.user.request=Cancelling transfer(s) at user request
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
-NavHelp.button.Ok.mnemonic=O
-NavHelp.button.Ok.text=OK
 NavHelp.error.opening.help.file=Error opening help file: 
 NavHelp.name=NavHelp
 NavHelp.title=NavHelp
@@ -376,7 +369,9 @@ Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
 Navigator.textField.Location.toolTipText=Location
 Navigator.workstation=Workstation
+Progress.buttonCancel.text_2=Cancel
 Progress.title=Progress
+Progress.title.dryrun=Dry-Run Progress
 Properties.drives=Drives: 
 Properties.free=Free: 
 Properties.libraries=Libraries: 
@@ -387,10 +382,8 @@ Properties.type=Type:
 Settings.appearance.tab.title=Appearance
 Settings.backupPanel.tab.title=Backup
 Settings.browserPanel.tab.title=Browser
-Settings.button.Cancel.text=Cancel
 Settings.button.ChooseColor.text=Choose
 Settings.button.ChooseColor.toolTipText=Select color of Hint Tracking button
-Settings.button.Ok.text=OK
 Settings.button.dateInfo.text.tooltip=Display date formatting help
 Settings.button.dateInfo.text=Help
 Settings.date.format.help.title=Date Format Help
@@ -427,7 +420,6 @@ ToolUI.button.Copy.text=Copy
 ToolUI.button.Delete.text=Delete
 ToolUI.button.DeleteRow.text=Delete
 ToolUI.button.New.text=New
-ToolUI.button.cancel.text=Cancel
 ToolUI.button.done.text=Done
 ToolUI.title=Tool User Interface
 Transfer.checking=Checking {0, choice, 0#target location|1#library source} for {1} with minimum {2} on {3, choice, 0#remote|1#local} path {4} has 
@@ -463,6 +455,8 @@ Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete 
 Z.cancel.all.changes=Cancel all changes?
 Z.cancel.changes=Cancel Changes
 Z.cancel.run=Cancel Run
+Z.cancel.the.current.operation=Cancel the current operation?
+Z.cancel=Cancel
 Z.cannot.find=Cannot find\: 
 Z.completed=\ completed
 Z.copy=\ (copy)
@@ -476,12 +470,16 @@ Z.exception=Exception\:
 Z.invalid.selection=Invalid selection\: 
 Z.local.lowercase=local
 Z.local.uppercase=Local 
+Z.no=No
 Z.not.found=\ not found
+Z.ok=Ok
+Z.open=Open!
 Z.please.rename.the.existing=Please rename the existing 
+Z.please.wait.for.the.current.operation.to.finish=Please wait for the current operation to finish
 Z.publisher=Publisher
 Z.remote.lowercase=remote
 Z.remote.uppercase=Remote 
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.untitled=Untitled
-Z.please.wait.for.the.current.operation.to.finish=Please wait for the current operation to finish
+Z.yes=Yes
