--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -58,9 +58,11 @@ JobsUI.buttonRun.text=Run
 JobsUI.buttonRun.toolTipText=Execute the selected configuration
 JobsUI.buttonTaskDown.toolTipText=Move task down
 JobsUI.buttonTaskUp.toolTipText=Move task Up
-JobsUI.generated=Copy job command line (Ctrl-C)\: 
+JobsUI.generated=Copy (Ctrl-C) job command line\: 
 JobsUI.help=Jobs Help
 JobsUI.job.has.no.tasks=Job has no tasks
+JobsUI.labelSub.text=text
+JobsUI.labelPub.text=text
 JobsUI.labelHelp.toolTipText=Jobs help
 JobsUI.labelOrigins.text=Task Origins\:
 JobsUI.labelTasks.text=Tasks\:
@@ -473,7 +475,7 @@ Z.local.uppercase=Local
 Z.no=No
 Z.not.found=\ not found
 Z.ok=Ok
-Z.open=Open!
+Z.open=Open
 Z.please.rename.the.existing=Please rename the existing 
 Z.please.wait.for.the.current.operation.to.finish=Please wait for the current operation to finish
 Z.publisher=Publisher
