Commit before starting on Renamer Tool

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -1,6 +1,7 @@
 #
 # Default and en_US locale
 # Trailing spaces are important
+# "Z." items are shared
 #
 About.title=About
 Browser.add.bookmark=Add Bookmark
@@ -459,6 +460,7 @@ Z.cancel.changes=Cancel Changes
 Z.cancel.run=Cancel Run
 Z.cancel.the.current.operation=Cancel the current operation?
 Z.cancel=Cancel
+Z.cancelled=\ cancelled
 Z.cannot.find=Cannot find\: 
 Z.completed=\ completed
 Z.copy=\ (copy)
