Incremental progress on Renamer tool

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -401,7 +401,7 @@ Settings.librariesPanel.tab.title=Libraries
 Settings.localeLabel.text=Locale\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
 Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
-Settings.scaleCheckBox.text=uncheck for decimal (1000) K
+Settings.scaleCheckBox.toolTipText=Uncheck for decimal (1000) K
 Settings.scaleLabel.text=Binary (1024) K scale\:
 Settings.showCcpConfirmationLabel.text=Confirm copy/cut/paste\:
 Settings.showDeleteConfirmationLabel.text=Confirm delete\:
@@ -486,4 +486,48 @@ Z.remote.uppercase=Remote
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.untitled=Untitled
+Z.update=Update
+Z.update.tooltip.text=Update examples from selected locations(s)
 Z.yes=Yes
+Renamer.button.AddRow.mnemonic=A
+Renamer.button.AddRow.text=Add
+Renamer.button.AddRow.toolTipText=Add an empty pattern
+Renamer.button.Copy.mnemonic=C
+Renamer.button.Copy.text=Copy
+Renamer.button.Copy.toolTipText=Copy an existing tool configuration
+Renamer.button.Delete.mnemonic=D
+Renamer.button.Delete.text=Delete
+Renamer.button.Delete.toolTipText=Delete a tool configuration
+Renamer.button.New.mnemonic=N
+Renamer.button.New.text=New
+Renamer.button.New.toolTipText=Add new tool configuration
+Renamer.button.Run.mnemonic=R
+Renamer.button.Run.text=Run
+Renamer.button.Run.toolTipText=Execute the selected configuration on the selected Browser locations(s)
+Renamer.checkBoxBeforeExtension.text=Before .extension
+Renamer.checkBoxFromEnd.text=From end  
+Renamer.checkBoxOverwrite.text=Overwrite  
+Renamer.config.cancelled=Renamer {0} cancelled
+Renamer.displayName=Renamer
+Renamer.error.writing=Error writing: 
+Renamer.help=Renamer Help
+Renamer.labelHelp.toolTipText=Tool help
+Renamer.labelPosition.text=Position\:  
+Renamer.labelTextToInsert.text=Text\:  
+Renamer.nothing.selected.in.browser=Nothing selected in Browser
+Renamer.radioButtonTitleCase.text=Title
+Renamer.radioButtonLowerCase.text=Lower
+Renamer.radioButtonFirstUpperCase.text=First upper
+Renamer.radioButtonUpperCase.text=Upper
+Renamer.run.on.N.locations=Run "{0}" on {1} {2} location(s)?
+Renamer.stop.running.renamer=Stop currently running Renamer?
+Renamer.task.definition.and.loaded.repository.do.not.match=Task definition and loaded repository do not match
+Renamer.title=Renamer
+Renamer.uses.only.one.repository={0} uses only one repository
+RenameUI.type.combobox.case.change=Case change
+RenameUI.type.combobox.insert=Insert
+RenameUI.type.combobox.insert.date.time=Insert date/time
+RenameUI.type.combobox.numbering=Numbering
+RenameUI.type.combobox.replace=Replace
+RenameUI.type.combobox.remove=Remove
+RenameUI.type.combobox.select.type=Select type:
