--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -490,8 +490,6 @@ Z.update=Update
 Z.update.tooltip.text=Update examples from selected locations(s)
 Z.yes=Yes
 Renamer.button.AddRow.mnemonic=A
-Renamer.button.AddRow.text=Add
-Renamer.button.AddRow.toolTipText=Add an empty pattern
 Renamer.button.Copy.mnemonic=C
 Renamer.button.Copy.text=Copy
 Renamer.button.Copy.toolTipText=Copy an existing tool configuration
@@ -504,21 +502,31 @@ Renamer.button.New.toolTipText=Add new tool configuration
 Renamer.button.Run.mnemonic=R
 Renamer.button.Run.text=Run
 Renamer.button.Run.toolTipText=Execute the selected configuration on the selected Browser locations(s)
-Renamer.checkBoxBeforeExtension.text=Before .extension
-Renamer.checkBoxFromEnd.text=From end  
-Renamer.checkBoxOverwrite.text=Overwrite  
+Renamer.checkBoxInsertBeforeExtension.text=Before .extension
+Renamer.checkBoxReplaceRegularExpr.text=Regular expression
+Renamer.checkBoxNumberingBeforeExtension.text_2=Before .extension
+Renamer.checkBoxInsertFromEnd.text=From end  
+Renamer.checkBoxNumberingFromEnd.text_2=From end  
+Renamer.checkBoxInsertOverwrite.text=Overwrite  
+Renamer.checkBoxReplaceCase.text=Case sensitive
+Renamer.checkBoxNumberingOverwrite.text_2=Overwrite  
 Renamer.config.cancelled=Renamer {0} cancelled
 Renamer.displayName=Renamer
 Renamer.error.writing=Error writing: 
 Renamer.help=Renamer Help
+Renamer.labelZeros.text=Zeros\: 
 Renamer.labelHelp.toolTipText=Tool help
-Renamer.labelPosition.text=Position\:  
+Renamer.labelInsertPosition.text=Position\:  
+Renamer.labeReplace.text=Replace\:  
+Renamer.labelNumberingPosition.text_2=Position\:  
 Renamer.labelTextToInsert.text=Text\:  
+Renamer.labelFind.text=Find\:  
+Renamer.labelStart.text=Start\:  
 Renamer.nothing.selected.in.browser=Nothing selected in Browser
-Renamer.radioButtonTitleCase.text=Title
-Renamer.radioButtonLowerCase.text=Lower
+Renamer.radioButtonTitleCase.text=Title Case
+Renamer.radioButtonLowerCase.text=lower
 Renamer.radioButtonFirstUpperCase.text=First upper
-Renamer.radioButtonUpperCase.text=Upper
+Renamer.radioButtonUpperCase.text=UPPER
 Renamer.run.on.N.locations=Run "{0}" on {1} {2} location(s)?
 Renamer.stop.running.renamer=Stop currently running Renamer?
 Renamer.task.definition.and.loaded.repository.do.not.match=Task definition and loaded repository do not match
@@ -526,7 +534,6 @@ Renamer.title=Renamer
 Renamer.uses.only.one.repository={0} uses only one repository
 RenameUI.type.combobox.case.change=Case change
 RenameUI.type.combobox.insert=Insert
-RenameUI.type.combobox.insert.date.time=Insert date/time
 RenameUI.type.combobox.numbering=Numbering
 RenameUI.type.combobox.replace=Replace
 RenameUI.type.combobox.remove=Remove
