--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -23,8 +23,9 @@ BrowserTable.column.modified=Modified
 BrowserTable.column.name=Name
 BrowserTable.column.size=Size
 Job.config.cancelled=Job {0} cancelled
+Job.continuing.job=Continuing job\: 
+Job.executing.job=Executing job\: 
 Job.this.job.contains.remote.subscriber=This job contains remote subscriber(s). The existing remote subscriber connection will be unavailable while the job is running. Continue?
-Jobs.executing.job=Executing job\: 
 JobsUI.add.N.origins=Add {0} {1} origins?
 JobsUI.any.publisher=Any publisher
 JobsUI.any.subscriber=Any subscriber
@@ -62,10 +63,10 @@ JobsUI.buttonTaskUp.toolTipText=Move task Up
 JobsUI.generated=Copy (Ctrl-C) job command line\: 
 JobsUI.help=Jobs Help
 JobsUI.job.has.no.tasks=Job has no tasks
-JobsUI.labelSub.text=text
-JobsUI.labelPub.text=text
 JobsUI.labelHelp.toolTipText=Jobs help
 JobsUI.labelOrigins.text=Task Origins\:
+JobsUI.labelPub.text=text
+JobsUI.labelSub.text=text
 JobsUI.labelTasks.text=Tasks\:
 JobsUI.publisher.specific=Specific publisher
 JobsUI.pubsub.select.publisher.or.subscriber=Select Publisher or Subscriber
@@ -80,7 +81,7 @@ JobsUI.select.publisher.tooltip=Select publisher
 JobsUI.select.publisher=-select publisher-
 JobsUI.select.subscriber.tooltip=Select subscriber
 JobsUI.select.subscriber=-select subscriber-
-JobsUI.select.tool=Select tool\:
+JobsUI.select.tool=Select job or tool\:
 JobsUI.stop.currently.running.job=Stop currently running Job?
 JobsUI.subscriber.local=Local Subscriber
 JobsUI.subscriber.remote=Remote Subscriber
@@ -373,8 +374,8 @@ Navigator.splitPane.Libraries.tab.title=Libraries
 Navigator.textField.Location.toolTipText=Location
 Navigator.workstation=Workstation
 Progress.buttonCancel.text_2=Cancel
-Progress.title=Progress
 Progress.title.dryrun=Dry-Run Progress
+Progress.title=Progress
 Properties.drives=Drives: 
 Properties.free=Free: 
 Properties.libraries=Libraries: 
@@ -382,6 +383,61 @@ Properties.path=Path:
 Properties.size=Size: 
 Properties.sources=Source(s): {0}
 Properties.type=Type: 
+RenameUI.type.combobox.case.change=Case change
+RenameUI.type.combobox.insert=Insert
+RenameUI.type.combobox.numbering=Numbering
+RenameUI.type.combobox.remove=Remove
+RenameUI.type.combobox.replace=Replace
+RenameUI.type.combobox.select.type=Select type:
+Renamer.button.Copy.mnemonic=C
+Renamer.button.Copy.text=Copy
+Renamer.button.Copy.toolTipText=Copy an existing tool configuration
+Renamer.button.Delete.mnemonic=D
+Renamer.button.Delete.text=Delete
+Renamer.button.Delete.toolTipText=Delete a tool configuration
+Renamer.button.New.mnemonic=N
+Renamer.button.New.text=New
+Renamer.button.New.toolTipText=Add new tool configuration
+Renamer.button.Run.mnemonic=R
+Renamer.button.Run.text=Run
+Renamer.button.Run.toolTipText=Execute the selected configuration on the selected Browser locations(s)
+Renamer.buttonRefresh.mnemonic=F
+Renamer.checkBoxCase.text=Case sensitive
+Renamer.checkBoxInsertFromEnd.text=From end  
+Renamer.checkBoxInsertFromEnd.toolTipText=Ignore Position and insert at the end
+Renamer.checkBoxInsertOverwrite.text=Overwrite  
+Renamer.checkBoxNumberingFromEnd.text_2=From end  
+Renamer.checkBoxNumberingOverwrite.text_2=Overwrite  
+Renamer.checkBoxRegularExpr.text=Regular expression
+Renamer.checkBoxRemoveFromEnd.text=From end
+Renamer.config.cancelled=Renamer {0} cancelled
+Renamer.displayName=Renamer
+Renamer.error.writing=Error writing: 
+Renamer.help=Renamer Help
+Renamer.labeReplace.text=Replace\: 
+Renamer.labelFind.text=Find\: 
+Renamer.labelFrom.text=From\: 
+Renamer.labelHelp.toolTipText=Tool help
+Renamer.labelInsertPosition.text=Position\: 
+Renamer.labelLength.text=Length\: 
+Renamer.labelNumberingPosition.text_2=Position\: 
+Renamer.labelStart.text=Start\: 
+Renamer.labelTextToInsert.text=Text\: 
+Renamer.labelZeros.text=Zeros\: 
+Renamer.nothing.selected.in.browser=Nothing selected in Browser
+Renamer.radioButtonFirstUpperCase.text=First upper
+Renamer.radioButtonLowerCase.text=lower
+Renamer.radioButtonTitleCase.text=Title Case
+Renamer.radioButtonUpperCase.text=UPPER
+Renamer.run.on.N.locations=Run "{0}" on {1} {2} location(s)?
+Renamer.stop.running.renamer=Stop currently running Renamer?
+Renamer.task.definition.and.loaded.repository.do.not.match=Task definition and loaded repository do not match
+Renamer.textFieldInsertPosition.toolTipText=Index from 1 where to insert text
+Renamer.textFieldStart.toolTipText=Starting number
+Renamer.textFieldToInsert.toolTipText=Text to insert
+Renamer.textFieldZeros.toolTipText=Number of leading zeros, 1 \= 01 for example
+Renamer.title=Renamer
+Renamer.uses.only.one.repository={0} uses only one repository
 Settings.appearance.tab.title=Appearance
 Settings.backupPanel.tab.title=Backup
 Settings.browserPanel.tab.title=Browser
@@ -419,12 +475,6 @@ Settings.textField.HintButtonColor.toolTipText=RGB color in hexadecimal
 Settings.this.title=Navigator Settings
 Task.no.repository.is.loaded=No repository is loaded
 Task.tool.not.found=Tool not found: 
-ToolUI.button.Copy.text=Copy
-ToolUI.button.Delete.text=Delete
-ToolUI.button.DeleteRow.text=Delete
-ToolUI.button.New.text=New
-ToolUI.button.done.text=Done
-ToolUI.title=Tool User Interface
 Transfer.checking=Checking {0, choice, 0#target location|1#library source} for {1} with minimum {2} on {3, choice, 0#remote|1#local} path {4} has 
 Transfer.copying=Copying
 Transfer.could.not.retrieve.remote.collection.file=Could not retrieve remote collection file
@@ -472,6 +522,7 @@ Z.error.writing=Error writing\:
 Z.error=Error:\ 
 Z.exception=Exception\: 
 Z.invalid.selection=Invalid selection\: 
+Z.job=Job
 Z.local.lowercase=local
 Z.local.uppercase=Local 
 Z.no=No
@@ -481,60 +532,11 @@ Z.open=Open
 Z.please.rename.the.existing=Please rename the existing 
 Z.please.wait.for.the.current.operation.to.finish=Please wait for the current operation to finish
 Z.publisher=Publisher
+Z.refresh.tooltip.text=Refresh list with Browser selection(s)
+Z.refresh=Refresh
 Z.remote.lowercase=remote
 Z.remote.uppercase=Remote 
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.untitled=Untitled
-Z.update=Update
-Z.update.tooltip.text=Update examples from selected locations(s)
 Z.yes=Yes
-Renamer.button.AddRow.mnemonic=A
-Renamer.button.Copy.mnemonic=C
-Renamer.button.Copy.text=Copy
-Renamer.button.Copy.toolTipText=Copy an existing tool configuration
-Renamer.button.Delete.mnemonic=D
-Renamer.button.Delete.text=Delete
-Renamer.button.Delete.toolTipText=Delete a tool configuration
-Renamer.button.New.mnemonic=N
-Renamer.button.New.text=New
-Renamer.button.New.toolTipText=Add new tool configuration
-Renamer.button.Run.mnemonic=R
-Renamer.button.Run.text=Run
-Renamer.button.Run.toolTipText=Execute the selected configuration on the selected Browser locations(s)
-Renamer.checkBoxInsertBeforeExtension.text=Before .extension
-Renamer.checkBoxReplaceRegularExpr.text=Regular expression
-Renamer.checkBoxNumberingBeforeExtension.text_2=Before .extension
-Renamer.checkBoxInsertFromEnd.text=From end  
-Renamer.checkBoxNumberingFromEnd.text_2=From end  
-Renamer.checkBoxInsertOverwrite.text=Overwrite  
-Renamer.checkBoxReplaceCase.text=Case sensitive
-Renamer.checkBoxNumberingOverwrite.text_2=Overwrite  
-Renamer.config.cancelled=Renamer {0} cancelled
-Renamer.displayName=Renamer
-Renamer.error.writing=Error writing: 
-Renamer.help=Renamer Help
-Renamer.labelZeros.text=Zeros\: 
-Renamer.labelHelp.toolTipText=Tool help
-Renamer.labelInsertPosition.text=Position\:  
-Renamer.labeReplace.text=Replace\:  
-Renamer.labelNumberingPosition.text_2=Position\:  
-Renamer.labelTextToInsert.text=Text\:  
-Renamer.labelFind.text=Find\:  
-Renamer.labelStart.text=Start\:  
-Renamer.nothing.selected.in.browser=Nothing selected in Browser
-Renamer.radioButtonTitleCase.text=Title Case
-Renamer.radioButtonLowerCase.text=lower
-Renamer.radioButtonFirstUpperCase.text=First upper
-Renamer.radioButtonUpperCase.text=UPPER
-Renamer.run.on.N.locations=Run "{0}" on {1} {2} location(s)?
-Renamer.stop.running.renamer=Stop currently running Renamer?
-Renamer.task.definition.and.loaded.repository.do.not.match=Task definition and loaded repository do not match
-Renamer.title=Renamer
-Renamer.uses.only.one.repository={0} uses only one repository
-RenameUI.type.combobox.case.change=Case change
-RenameUI.type.combobox.insert=Insert
-RenameUI.type.combobox.numbering=Numbering
-RenameUI.type.combobox.replace=Replace
-RenameUI.type.combobox.remove=Remove
-RenameUI.type.combobox.select.type=Select type:
