--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -64,10 +64,10 @@ JobsUI.generated=Copy (Ctrl-C) job command line\:
 JobsUI.help=Jobs Help
 JobsUI.job.has.no.tasks=Job has no tasks
 JobsUI.labelHelp.toolTipText=Jobs help
-JobsUI.labelOrigins.text=Task Origins\:
+JobsUI.labelOrigins.text=Task Origins
 JobsUI.labelPub.text=text
 JobsUI.labelSub.text=text
-JobsUI.labelTasks.text=Tasks\:
+JobsUI.labelTasks.text=Tasks
 JobsUI.publisher.specific=Specific publisher
 JobsUI.pubsub.select.publisher.or.subscriber=Select Publisher or Subscriber
 JobsUI.pubsub.select.publisher=Select Publisher
@@ -522,7 +522,6 @@ Z.error.writing=Error writing\:
 Z.error=Error:\ 
 Z.exception=Exception\: 
 Z.invalid.selection=Invalid selection\: 
-Z.job=Job
 Z.local.lowercase=local
 Z.local.uppercase=Local 
 Z.no=No
@@ -540,3 +539,6 @@ Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.untitled=Untitled
 Z.yes=Yes
+jobs.displayName=Job
+Renamer.browser.selections=Browser Selections
+Renamer.new.name=New Name
