--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -374,6 +374,7 @@ Navigator.splitPane.Libraries.tab.title=Libraries
 Navigator.textField.Location.toolTipText=Location
 Navigator.workstation=Workstation
 Progress.buttonCancel.text_2=Cancel
+Progress.not.active=No processes active
 Progress.title.dryrun=Dry-Run Progress
 Progress.title=Progress
 Properties.drives=Drives: 
@@ -515,6 +516,7 @@ Z.cannot.find=Cannot find\:
 Z.completed=\ completed
 Z.copy=\ (copy)
 Z.delete.configuration=Delete Configuration
+Z.deleted=Deleted: 
 Z.dry.run=\ (dry-run)
 Z.error.parsing=Error parsing\: 
 Z.error.reading=Error reading\: 
@@ -535,10 +537,15 @@ Z.refresh.tooltip.text=Refresh list with Browser selection(s)
 Z.refresh=Refresh
 Z.remote.lowercase=remote
 Z.remote.uppercase=Remote 
+Z.renamed=Renamed: 
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
+Z.to=\ to 
 Z.untitled=Untitled
+Z.would.delete=Would delete: 
+Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
 Renamer.browser.selections=Browser Selections
 Renamer.new.name=New Name
+Browser.library.is.not.loaded=Library {0} is not loaded
