--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -13,6 +13,7 @@ Browser.error=Error:
 Browser.home=Home
 Browser.launch.of.items.not.supported=\ items not supported
 Browser.launch.of=Launch of 
+Browser.library.is.not.loaded=Library {0} is not loaded
 Browser.open.a.publisher=--Open a publisher--
 Browser.open.a.subscriber=--Open a subscriber--
 Browser.please.select.a.single.item.to.bookmark=Please select a single item to bookmark
@@ -105,7 +106,7 @@ JunkRemover.button.RemoveRow.text=Remove
 JunkRemover.button.RemoveRow.toolTipText=Delete one or more patterns
 JunkRemover.button.Run.mnemonic=R
 JunkRemover.button.Run.text=Run
-JunkRemover.button.Run.toolTipText=Execute the selected configuration on the selected Browser locations(s)
+JunkRemover.button.Run.toolTipText=Execute the selected configuration on the selected Browser selection(s)
 JunkRemover.case=Case?
 JunkRemover.config.cancelled=Junk Remover {0} cancelled
 JunkRemover.displayName=Junk Remover
@@ -114,7 +115,7 @@ JunkRemover.help=Junk Remover Help
 JunkRemover.junk.pattern=Junk Pattern
 JunkRemover.labelHelp.toolTipText=Tool help
 JunkRemover.nothing.selected.in.browser=Nothing selected in Browser
-JunkRemover.run.on.N.locations=Run "{0}" on {1} {2} location(s)?
+JunkRemover.run.on.N.locations=Run "{0}" on {1} {2} Browser selection(s)?
 JunkRemover.stop.running.junk.remover=Stop currently running Junk Remover?
 JunkRemover.task.definition.and.loaded.repository.do.not.match=Task definition and loaded repository do not match
 JunkRemover.title=Junk Remover
@@ -151,6 +152,11 @@ NavTreeNode.bookmark=Bookmark
 NavTreeNode.collection=Collection
 NavTreeNode.computer=Computer
 NavTreeNode.could.not.retrieve.listing.from=Could not retrieve listing from 
+NavTreeNode.deep.scan..home.directory=Deep scan  home directory 
+NavTreeNode.deep.scan..local.drive=Deep scan  local drive 
+NavTreeNode.deep.scan..local.library=Deep scan  local library 
+NavTreeNode.deep.scan..remote.drive=Deep scan  remote drive 
+NavTreeNode.deep.scan..remote.library=Deep scan  remote library 
 NavTreeNode.deep.scan.local.directory=Deep scan local directory 
 NavTreeNode.deep.scan.remote.directory=Deep scan remote directory 
 NavTreeNode.directory=Directory
@@ -401,7 +407,7 @@ Renamer.button.New.text=New
 Renamer.button.New.toolTipText=Add new tool configuration
 Renamer.button.Run.mnemonic=R
 Renamer.button.Run.text=Run
-Renamer.button.Run.toolTipText=Execute the selected configuration on the selected Browser locations(s)
+Renamer.button.Run.toolTipText=Execute the selected configuration on current Browser selection(s)
 Renamer.buttonRefresh.mnemonic=F
 Renamer.checkBoxCase.text=Case sensitive
 Renamer.checkBoxInsertFromEnd.text=From end  
@@ -425,13 +431,16 @@ Renamer.labelNumberingPosition.text_2=Position\:
 Renamer.labelStart.text=Start\: 
 Renamer.labelTextToInsert.text=Text\: 
 Renamer.labelZeros.text=Zeros\: 
+Renamer.new.name=New Name
 Renamer.nothing.selected.in.browser=Nothing selected in Browser
+Renamer.old.name=Old Name
 Renamer.radioButtonFirstUpperCase.text=First upper
 Renamer.radioButtonLowerCase.text=lower
 Renamer.radioButtonTitleCase.text=Title Case
 Renamer.radioButtonUpperCase.text=UPPER
-Renamer.run.on.N.locations=Run "{0}" on {1} {2} location(s)?
+Renamer.run.on.N.locations=Run "{0}" on {1} {2} Browser selection(s)?
 Renamer.stop.running.renamer=Stop currently running Renamer?
+Renamer.tableChanges.toolTipText=Use the Run button to execute a Renamer on current Browser selection(s)
 Renamer.task.definition.and.loaded.repository.do.not.match=Task definition and loaded repository do not match
 Renamer.textFieldInsertPosition.toolTipText=Index from 1 where to insert text
 Renamer.textFieldStart.toolTipText=Starting number
@@ -507,6 +516,7 @@ Transfer.would.rm.directory=\  > Would rm directory:
 Transfer.would.rm.file=\  > Would rm file: 
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 Z.cancel.all.changes=Cancel all changes?
+Z.cancel.changes.toolTipText=Cancel changes and exit
 Z.cancel.changes=Cancel Changes
 Z.cancel.run=Cancel Run
 Z.cancel.the.current.operation=Cancel the current operation?
@@ -521,7 +531,7 @@ Z.dry.run=\ (dry-run)
 Z.error.parsing=Error parsing\: 
 Z.error.reading=Error reading\: 
 Z.error.writing=Error writing\: 
-Z.error=Error:\ 
+Z.error=Error 
 Z.exception=Exception\: 
 Z.invalid.selection=Invalid selection\: 
 Z.local.lowercase=local
@@ -533,11 +543,12 @@ Z.open=Open
 Z.please.rename.the.existing=Please rename the existing 
 Z.please.wait.for.the.current.operation.to.finish=Please wait for the current operation to finish
 Z.publisher=Publisher
-Z.refresh.tooltip.text=Refresh list with Browser selection(s)
+Z.refresh.tooltip.text=Refresh examples with Browser selection(s)
 Z.refresh=Refresh
 Z.remote.lowercase=remote
 Z.remote.uppercase=Remote 
 Z.renamed=Renamed: 
+Z.save.changes.toolTipText=Save changes and exit
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.to=\ to 
@@ -546,6 +557,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Renamer.browser.selections=Browser Selections
-Renamer.new.name=New Name
-Browser.library.is.not.loaded=Library {0} is not loaded
