Added recursive option to Renamer

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -409,6 +409,8 @@ Renamer.button.Run.mnemonic=R
 Renamer.button.Run.text=Run
 Renamer.button.Run.toolTipText=Execute the selected configuration on current Browser selection(s)
 Renamer.buttonRefresh.mnemonic=F
+Renamer.checkBoxRecursive.text=Recursive
+Renamer.checkBoxRecursive.toolTipText=If tool should process subdirectories of any selected directories
 Renamer.checkBoxCase.text=Case sensitive
 Renamer.checkBoxInsertFromEnd.text=From end  
 Renamer.checkBoxInsertFromEnd.toolTipText=Ignore Position and insert at the end
@@ -549,6 +551,8 @@ Z.remote.lowercase=remote
 Z.remote.uppercase=Remote 
 Z.renamed=Renamed: 
 Z.save.changes.toolTipText=Save changes and exit
+Z.skipping=Skipping 
+Z.skipping.child=Skipping {0} child of {1} 
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.to=\ to 
