--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -413,7 +413,11 @@ Renamer.checkBoxRecursive.text=Recursive
 Renamer.checkBoxRecursive.toolTipText=If tool should process subdirectories of any selected directories
 Renamer.checkBoxCase.text=Case sensitive
 Renamer.checkBoxInsertFromEnd.text=From end  
-Renamer.checkBoxInsertFromEnd.toolTipText=Ignore Position and insert at the end
+Renamer.checkBoxInsertFromEnd.toolTipText=Position calculated from the end
+Renamer.checkBoxInsertAtEnd.text=At end  
+Renamer.checkBoxInsertAtEnd.toolTipText=Ignore Position and insert at the end
+Renamer.checkBoxNumberingAtEnd.text=At end  
+Renamer.checkBoxNumberingAtEnd.toolTipText=Ignore Position and insert at the end
 Renamer.checkBoxInsertOverwrite.text=Overwrite  
 Renamer.checkBoxNumberingFromEnd.text_2=From end  
 Renamer.checkBoxNumberingOverwrite.text_2=Overwrite  
