--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -1,12 +1,17 @@
 #
 # Default and en_US locale
+#
 # Trailing spaces are important
 # "Z." items are shared
 #
+# This needs to be all lowercase
+jobs.displayName=Job
+#-----------------------------------------
 About.title=About
 Browser.add.bookmark=Add Bookmark
 Browser.bookmark.name=bookmark name: 
 Browser.computer=Computer
+Browser.connection.lost=Connection lost
 Browser.error.launching.item=Error launching item
 Browser.error.saving.bookmarks=Error saving Bookmarks: 
 Browser.error=Error: 
@@ -409,18 +414,18 @@ Renamer.button.Run.mnemonic=R
 Renamer.button.Run.text=Run
 Renamer.button.Run.toolTipText=Execute the selected configuration on current Browser selection(s)
 Renamer.buttonRefresh.mnemonic=F
-Renamer.checkBoxRecursive.text=Recursive
-Renamer.checkBoxRecursive.toolTipText=If tool should process subdirectories of any selected directories
 Renamer.checkBoxCase.text=Case sensitive
-Renamer.checkBoxInsertFromEnd.text=From end  
-Renamer.checkBoxInsertFromEnd.toolTipText=Position calculated from the end
 Renamer.checkBoxInsertAtEnd.text=At end  
 Renamer.checkBoxInsertAtEnd.toolTipText=Ignore Position and insert at the end
+Renamer.checkBoxInsertFromEnd.text=From end  
+Renamer.checkBoxInsertFromEnd.toolTipText=Position calculated from the end
+Renamer.checkBoxInsertOverwrite.text=Overwrite  
 Renamer.checkBoxNumberingAtEnd.text=At end  
 Renamer.checkBoxNumberingAtEnd.toolTipText=Ignore Position and insert at the end
-Renamer.checkBoxInsertOverwrite.text=Overwrite  
 Renamer.checkBoxNumberingFromEnd.text_2=From end  
 Renamer.checkBoxNumberingOverwrite.text_2=Overwrite  
+Renamer.checkBoxRecursive.text=Recursive
+Renamer.checkBoxRecursive.toolTipText=If tool should process subdirectories of any selected directories
 Renamer.checkBoxRegularExpr.text=Regular expression
 Renamer.checkBoxRemoveFromEnd.text=From end
 Renamer.config.cancelled=Renamer {0} cancelled
@@ -555,8 +560,8 @@ Z.remote.lowercase=remote
 Z.remote.uppercase=Remote 
 Z.renamed=Renamed: 
 Z.save.changes.toolTipText=Save changes and exit
-Z.skipping=Skipping 
 Z.skipping.child=Skipping {0} child of {1} 
+Z.skipping=Skipping 
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.to=\ to 
@@ -564,4 +569,3 @@ Z.untitled=Untitled
 Z.would.delete=Would delete: 
 Z.would.rename=Would rename: 
 Z.yes=Yes
-jobs.displayName=Job
