Fixed JunkRemover bugs, one not allowing selection of anything but physical directories and files and another with short filenames; shortened settings logging based on command line

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -536,6 +536,7 @@ Z.cancelled=\ cancelled
 Z.cannot.find=Cannot find\: 
 Z.completed=\ completed
 Z.copy=\ (copy)
+Z.count=Count: 
 Z.delete.configuration=Delete Configuration
 Z.deleted=Deleted: 
 Z.dry.run=\ (dry-run)
