--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -536,6 +536,7 @@ Z.cancelled=\ cancelled
 Z.cannot.find=Cannot find\: 
 Z.completed=\ completed
 Z.copy=\ (copy)
+Z.count=Count: 
 Z.delete.configuration=Delete Configuration
 Z.deleted=Deleted: 
 Z.dry.run=\ (dry-run)
