Added -b --blacklist option to use a file of IPv4 addresses to filter incoming connections; Progress on the Renamer tool

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -454,9 +454,9 @@ Renamer.stop.running.renamer=Stop currently running Renamer?
 Renamer.tableChanges.toolTipText=Use the Run button to execute a Renamer on current Browser selection(s)
 Renamer.task.definition.and.loaded.repository.do.not.match=Task definition and loaded repository do not match
 Renamer.textFieldInsertPosition.toolTipText=Index from 1 where to insert text
-Renamer.textFieldStart.toolTipText=Starting number
+Renamer.textFieldNumberingStart.toolTipText=Starting number
 Renamer.textFieldToInsert.toolTipText=Text to insert
-Renamer.textFieldZeros.toolTipText=Number of leading zeros, 1 \= 01 for example
+Renamer.textFieldNumberingZeros.toolTipText=Number of leading zeros, 1 \= 01 for example
 Renamer.title=Renamer
 Renamer.uses.only.one.repository={0} uses only one repository
 Settings.appearance.tab.title=Appearance
